--- a/Questoes/1.md
+++ b/Questoes/1.md
@@ -8,6 +8,7 @@ digitais.
 
 3. (a) Computadores de bordo e central multimídia. (b) Controle de ações de uma geladeira/Sistemas de 
 som portáteis. (c) Controles de máquinas e robôs/ Controle de qualidade / Gerenciador de tarefas.
-4.
 
-4.
+4. Sistemas embarcados podem possuir diversas configurações de hardware. Dentre as configurações destacam-se os sistemas embarcados compostos por FPGA, microcontroladores (MSP, AVR, PIC), e microprocessadores integrados(SoC), tais como ARM Cortex-A, Allwinner,OMAP, dentre outros. Sistemas que possuem microcontroladores são aplicados em situações que exigem, um controle maior, geralmente em baixo nível, e mais eficiente dos seus periféricos(ADC, Timer,GPIO) e geralmente possuem aplicações com interfaces mínimas entre o usuário e produto. Sistemas compostos por FPGA, são em geral sistemas de controle em tempo real, com multiplas tarefas ou voltados para algorítmos que necessitam de um de execução de processos em paralelo. SoC são arquiteturas que podem operar via sistemas operacionais, o que eleva o nível de abstração e facilita interfaces de comunicação com usuário. Possui mais periféricos e um poder de processamento maior em relação aos microcontroladores e possui controle de execução de processos em paralelo.
+
+5. Por ser uma placa mais acessível e com mais suporte na comunidade.
