--- a/Questoes/2.MD
+++ b/Questoes/2.MD
@@ -1,2 +1,30 @@
 ﻿1. Linux é o kernel de um sistema operacional (GNU), que controla os processos, dispositivos e gerencia arquivos do sistema, dentre outras funções que facilitam a comunicaço com o usuario.
-3. Shell é a interface de comunicaço intre o usuário e o kernel, a partir de linhas de comando, com comandos ágeis e rápidos.
+ 
+ 2. Daemons são processos que rodam em segundo plano no sistema operacional, isto é, não depende de controle do usuário. 
+ 
+ 3. Shell é a interface de comunicaço intre o usuário e o kernel, a partir de linhas de comando, com comandos ágeis e rápidos em um terminal.
+ 
+ 4. O super usuário tem privilégios totais para modificar qualquer tipo de arquivo do sistema, dos quais podem desabilitar funções ou habilitar funções do sistema operacional. Dessa forma, não é boa prática usar continuamente o super usuário.
+ 
+ 5. TAB
+ 6. Seta para cima
+ 7. (a)
+    (b)
+    (c)
+    (d)
+    (e)
+    (f)
+    (g)
+    (h)
+    (i)
+    (j)
+    (k)
+    (l)
+    (m)
+    (n)
+    (o)
+    (p)
+    (q)
+    (r)
+    (s)
+    (t)
