--- a/Questoes/2.MD
+++ b/Questoes/2.MD
@@ -8,23 +8,23 @@
  
  5. TAB
  6. Seta para cima
- 7. (a)
-    (b)
-    (c)
-    (d)
-    (e)
-    (f)
-    (g)
-    (h)
-    (i)
-    (j)
-    (k)
-    (l)
-    (m)
-    (n)
-    (o)
-    (p)
+ 7. (a) man
+    (b) ls
+    (c) pwd ls
+    (d) cd 
+    (e) mkdir
+    (f) rm
+    (g) rmdir
+    (h) cp
+    (i) cp -a
+    (j) mv
+    (k) mv **
+    (l) mv
+    (m) more
+    (n) 
+    (o) clear
+    (p) grep
     (q)
-    (r)
-    (s)
-    (t)
+    (r) sed
+    (s) chgrp -r
+    (t) echo
