--- a/Questoes/2.MD
+++ b/Questoes/2.MD
@@ -1,13 +1,17 @@
-﻿1. Linux é o kernel de um sistema operacional (GNU), que controla os processos, dispositivos e gerencia arquivos do sistema, dentre outras funções que facilitam a comunicaço com o usuario.
- 
- 2. Daemons são processos que rodam em segundo plano no sistema operacional, isto é, não depende de controle do usuário. 
- 
- 3. Shell é a interface de comunicaço intre o usuário e o kernel, a partir de linhas de comando, com comandos ágeis e rápidos em um terminal.
- 
- 4. O super usuário tem privilégios totais para modificar qualquer tipo de arquivo do sistema, dos quais podem desabilitar funções ou habilitar funções do sistema operacional. Dessa forma, não é boa prática usar continuamente o super usuário.
- 
- 5. TAB
- 6. Seta para cima
+1.Por que o Linux recebeu esse nome?
+ Linux é o kernel de um sistema operacional (GNU), que controla os processos, dispositivos e gerencia arquivos do sistema, dentre outras funções que facilitam a comunicaço com o usuario.
+2.O que são daemons?
+ Daemons são processos que rodam em segundo plano no sistema operacional, isto é, não depende de controle do usuário.
+3.O que é o shell?
+ Shell é a interface de comunicaço intre o usuário e o kernel, a partir de linhas de comando, com comandos ágeis e rápidos em um terminal.
+4.Por que é importante evitar executar o terminal como super-usuário?
+ O super usuário tem privilégios totais para modificar qualquer tipo de arquivo do sistema, dos quais podem desabilitar funções ou habilitar funções do sistema operacional. Dessa forma, não é boa prática usar continuamente o super usuário.
+5.Qual botão do teclado completa o que o usuário escreve no terminal, de acordo com o contexto?
+TAB
+6.Quais botões do teclado apresentam instruções escritas anteriormente?
+Seta para cima
+7.Apresente os respectivos comandos no terminal para: (a) Obter mais informações sobre um comando. (b) Apresentar uma lista com os arquivos dentro de uma pasta. (c) Apresentar o caminho completo da pasta. (d) Trocar de pasta. (e) Criar uma pasta. (f) Apagar arquivos definitivamente. (g) Apagar pastas definitivamente. (h) Copiar arquivos. (i) Copiar pastas. (j) Mover arquivos. (k) Mover pastas. (l) Renomear pastas. (m) Apresentar o conteúdo de um arquivo. (n) Apresentar o tipo de um arquivo. (o) Limpar a tela do terminal. (p) Encontrar ocorrências de palavras-chave em um arquivo-texto. (q) Ordenar informações em um arquivo-texto. (r) Substituir ocorrências de palavras-chave em um arquivo-texto. (s) Conferir se dois arquivos são iguais. (t) Escrever algo na tela.
+
  7. (a) man
     (b) ls
     (c) pwd ls
