--- a/Questoes/3.md
+++ b/Questoes/3.md
@@ -2,7 +2,26 @@ Para todas as questões, compile-as com o gcc e execute-as via terminal.
 
 Crie um "Olá mundo!" em C.
 
+#include<stdio.h>
+#include<stdlib.h>
+
+int main (void){
+        printf("Olá mundo !\n"); 
+return 0;
+}
+
+
 Crie um código em C que pergunta ao usuário o seu nome, e imprime no terminal "Ola " e o nome do usuário. Por exemplo, considerando que o código criado recebeu o nome de 'ola_usuario_1':
+#include<stdio.h>
+#include<stdlib.h>
+
+int main (void){
+        char name[100];
+        printf("Digite o seu nome: \n");
+        scanf("%s", name);
+        printf("Olá %s  \n", name); 
+return 0;
+}
 
 $ ./ola_usuario_1
 $ Digite o seu nome: Eu
@@ -12,10 +31,18 @@ Apresente os comportamentos do código anterior nos seguintes casos:
 
 $ ./ola_usuario_1
 $ Digite o seu nome: Eu Mesmo
+
+Ele ignora o segundo nome.
+$ Ola Eu
+
 (b) Se o usuário insere mais de um nome entre aspas duplas. Por exemplo:
 
+$ Ola "eu
 $ ./ola_usuario_1
 $ Digite o seu nome: "Eu Mesmo"
+
+$ Ola "eu
+
 (c) Se é usado um pipe. Por exemplo:
 
 $ echo Eu | ./ola_usuario_1
