--- a/Questoes/3.md
+++ b/Questoes/3.md
@@ -46,16 +46,27 @@ $ Ola "eu
 (c) Se é usado um pipe. Por exemplo:
 
 $ echo Eu | ./ola_usuario_1
+$ Digite o seu nome: 
+$ Olá Eu 
+
 (d) Se é usado um pipe com mais de um nome. Por exemplo:
 
 $ echo Eu Mesmo | ./ola_usuario_1
+$ Digite o seu nome: 
+$ Olá Eu 
 (e) Se é usado um pipe com mais de um nome entre aspas duplas. Por exemplo:
 
 $ echo "Eu Mesmo" | ./ola_usuario_1
+$ Digite o seu nome: 
+$ Olá Eu 
+
 (f) Se é usado o redirecionamento de arquivo. Por exemplo:
 
 $ echo Ola mundo cruel! > ola.txt
 $ ./ola_usuario_1 < ola.txt
+$ Digite o seu nome: 
+$ Olá Ola 
+
 Crie um código em C que recebe o nome do usuário como um argumento de entrada (usando as variáveis argc e *argv[]), e imprime no terminal "Ola " e o nome do usuário. Por exemplo, considerando que o código criado recebeu o nome de 'ola_usuario_2':
 $ ./ola_usuario_2 Eu
 $ Ola Eu
