--- a/Questoes/3.md
+++ b/Questoes/3.md
@@ -31,8 +31,6 @@ Apresente os comportamentos do código anterior nos seguintes casos:
 
 $ ./ola_usuario_1
 $ Digite o seu nome: Eu Mesmo
-
-Ele ignora o segundo nome.
 $ Ola Eu
 
 (b) Se o usuário insere mais de um nome entre aspas duplas. Por exemplo:
@@ -70,34 +68,76 @@ $ Olá Ola
 Crie um código em C que recebe o nome do usuário como um argumento de entrada (usando as variáveis argc e *argv[]), e imprime no terminal "Ola " e o nome do usuário. Por exemplo, considerando que o código criado recebeu o nome de 'ola_usuario_2':
 $ ./ola_usuario_2 Eu
 $ Ola Eu
+
+#include<stdio.h>
+#include<stdlib.h>
+int main (int argc, char **argv){
+        printf("Olá %s \n", argv[1]); 
+return 0;
+}
+
 Apresente os comportamentos do código anterior nos seguintes casos:
 (a) Se o usuário insere mais de um nome.
 
 $ ./ola_usuario_2 Eu Mesmo
+$ Olá Eu
 (b) Se o usuário insere mais de um nome entre aspas duplas. Por exemplo:
 
 $ ./ola_usuario_2 "Eu Mesmo"
+$ Olá Eu Mesmo
 (c) Se é usado um pipe. Por exemplo:
 
 $ echo Eu | ./ola_usuario_2
+Olá (null) 
 (d) Se é usado um pipe com mais de um nome. Por exemplo:
 
 $ echo Eu Mesmo | ./ola_usuario_2
+Olá (null) 
 (e) Se é usado um pipe com mais de um nome entre aspas duplas. Por exemplo:
 
 $ echo Eu Mesmo | ./ola_usuario_2
+Olá (null) 
+
 (f) Se é usado o redirecionamento de arquivo. Por exemplo:
 
 $ echo Ola mundo cruel! > ola.txt
 $ ./ola_usuario_2 < ola.txt
+Olá (null) 
+
 Crie um código em C que faz o mesmo que o código da questão 4, e em seguida imprime no terminal quantos valores de entrada foram fornecidos pelo usuário. Por exemplo, considerando que o código criado recebeu o nome de 'ola_usuario_3':
 $ ./ola_usuario_3 Eu
 $ Ola Eu
 $ Numero de entradas = 2
+
+#include<stdio.h>
+#include<stdlib.h>
+int main (int argc, char **argv){
+        printf("Olá %s \n", argv[1]);
+        printf("Numero de entradas =  %d \n", argc);
+return 0;
+}
+
 Crie um código em C que imprime todos os argumentos de entrada fornecidos pelo usuário. Por exemplo, considerando que o código criado recebeu o nome de 'ola_argumentos':
+
 $ ./ola_argumentos Eu Mesmo e Minha Pessoa
 $ Argumentos: Eu Mesmo e Minha Pessoa
+
+#include<stdio.h>
+#include<stdlib.h>
+int main (int argc, char **argv){
+        //printf("Numero de entradas =  %d \n", argc);
+        int i = 0;
+        printf("Argumentos: ");
+        for(i = 1; i < argc; i++){
+                printf("%s ", argv[i]);
+        }
+        printf("\n"); 
+return 0;
+}
+
 Crie uma função que retorna a quantidade de caracteres em uma string, usando o seguinte protótipo: int Num_Caracs(char *string); Salve-a em um arquivo separado chamado 'num_caracs.c'. Salve o protótipo em um arquivo chamado 'num_caracs.h'. Compile 'num_caracs.c' para gerar o objeto 'num_caracs.o'.
+
+
 
 Re-utilize o objeto criado na questão 8 para criar um código que imprime cada argumento de entrada e a quantidade de caracteres de cada um desses argumentos. Por exemplo, considerando que o código criado recebeu o nome de 'ola_num_caracs_1':
 
